--- a/Jupyter_Notebooks/OSTL_SB.ipynb
+++ b/Jupyter_Notebooks/OSTL_SB.ipynb
@@ -1,6 +1,32 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3fa3f4dc",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
+    "https://colab.research.google.com/github/Arif-PhyChem/MLQD/blob/main/Jupyter_Notebooks/OSTL_SB.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "212bee0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import the MLQD package from github and install some packages\n",
+    "!git clone https://github.com/Arif-PhyChem/MLQD.git\n",
+    "!git clone https://github.com/Arif-PhyChem/MLQD.git\n",
+    "!pip install MLatom\n",
+    "!pip install tensorflow hyperopt scikit-learn matplotlib\n",
+    "import os\n",
+    "os.chdir('MLQD')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "725bc84f",
@@ -825,7 +851,7 @@
     "        'OptEpochs': 10,                # int: Number of epochs for CNN optimization \n",
     "        'TrEpochs': 10,                 # int: Number of epochs for CNN training  \n",
     "        'max_evals': 10,                # int: Maximum number of evaluations in the case of hyperopt optimization\n",
-    "        'dataPath': 'sb_data',          # str: Data path\n",
+    "        'dataPath': 'Jupyter_Notebooks/sb_data',          # str: Data path\n",
     "        'QDmodelOut': 'OSTL_SB_model'   # str: (Optional), providing a name to save the model at\n",
     "        }\n",
     "quant_dyn(**param)"
@@ -1005,7 +1031,7 @@
     "        'hyperParam': 'False',          # str: Default is 'False', we can pass 'True' (optimize the hyperparameters) or 'False' (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # int: Patience for early stopping in CNN training\n",
     "        'TrEpochs': 10,                 # int: Number of epochs for CNN training  \n",
-    "        'dataPath': 'sb_data',          # str: Data path\n",
+    "        'dataPath': 'Jupyter_Notebooks/sb_data',          # str: Data path\n",
     "        'QDmodelOut': 'OSTL_SB_model'   # str: (Optional), providing a name to save the model at\n",
     "        }\n",
     "quant_dyn(**param)"
@@ -1761,7 +1787,7 @@
     }
    ],
    "source": [
-    "heom_dyn = np.load('test_set/sb/2_epsilon-0.0_Delta-1.0_lambda-0.1_gamma-4.0_beta-1.0.npy')\n",
+    "heom_dyn = np.load('Jupyter_Notebooks/test_set/sb/2_epsilon-0.0_Delta-1.0_lambda-0.1_gamma-4.0_beta-1.0.npy')\n",
     "pred_dyn = np.load('Qd_trajectory.npy')\n",
     "t_1 = np.real(heom_dyn[:,0])\n",
     "t_2 = np.real(pred_dyn[:,0])\n",
