--- a/Jupyter_Notebooks/AIQD_SB.ipynb
+++ b/Jupyter_Notebooks/AIQD_SB.ipynb
@@ -1,6 +1,31 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d898807b",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
+    "https://github.com/Arif-PhyChem/MLQD/blob/main/Jupyter_Notebooks/AIQD_SB.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12ca3d5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import the MLQD package from github and install some packages\n",
+    "!git clone https://github.com/Arif-PhyChem/MLQD.git\n",
+    "!pip install MLatom\n",
+    "!pip install tensorflow hyperopt scikit-learn matplotlib\n",
+    "import os\n",
+    "os.chdir('MLQD')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "34e0f342",
@@ -470,7 +495,7 @@
     "        'OptEpochs': 10,                # int: Number of epochs for CNN optimization \n",
     "        'TrEpochs': 10,                 # int: Number of epochs for CNN training  \n",
     "        'max_evals': 1,                 # int: Maximum number of evaluations in the case of hyperopt optimization\n",
-    "        'dataPath': 'sb_data',          # str: Data path\n",
+    "        'dataPath': 'Jupyter_Notebooks/sb_data',          # str: Data path\n",
     "        'QDmodelOut': 'AIQD_SB_model'   # str: (Optional), providing a name to save the model at\n",
     "        }\n",
     "    \n",
@@ -668,7 +693,7 @@
     "        'hyperParam': 'False',          # str: Default is 'False', we can pass 'True' (optimize the hyperparameters) or 'False' (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # Int: Patience for early stopping in CNN training \n",
     "        'TrEpochs': 10,                 # int: Number of epochs for CNN training  \n",
-    "        'dataPath': 'sb_data',          # str: Data path\n",
+    "        'dataPath': 'Jupyter_Notebooks/sb_data',          # str: Data path\n",
     "        'QDmodelOut': 'AIQD_SB_model'   # str: (Optional), providing a name to save the model at\n",
     "        }\n",
     "    \n",
@@ -863,13 +888,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8fd502de",
    "metadata": {},
    "source": [
-    "# Propagating dynamics with the trained OSTL model \n",
+    "# Propagating dynamics with the trained AIQD model \n",
     "\n",
-    "Here we will demonstrate how to propagate dynamics with the model we trained above \"OSTL_FMO_model.hdf5\". We will provide the simulation parameters and the OSTL will predict the corresponding dynamics. **While training the model, the normalization constants for $\\epsilon, \\Delta, \\gamma, \\lambda$ and $\\beta$, number of Logistic functions and constants for Logistic function, i.e, $a, b, c, d$ were saved as a pickle file (with the similar name as the model name). Thus the user does not need to provide them, MLQD will automatically load them.** \n",
+    "Here we will demonstrate how to propagate dynamics with the model we trained above \"AIQD_FMO_model.hdf5\". We will provide the simulation parameters and the AIQD will predict the corresponding dynamics. **While training the model, the normalization constants for $\\epsilon, \\Delta, \\gamma, \\lambda$ and $\\beta$, number of Logistic functions and constants for Logistic function, i.e, $a, b, c, d$ were saved as a pickle file (with the similar name as the model name). Thus the user does not need to provide, MLQD will automatically load them.** \n",
     "\n",
     "***MLQD is also able to plot the dynamics against the reference trajectory***"
    ]
@@ -1017,7 +1043,7 @@
     "        'QDtrajOut': 'Qd_trajectory',           # str: (Optional), File name where the trajectory should be saved\n",
     "        'xlim': 20,                             # Xaxis limit for plotting. Default is equal to propagation time\n",
     "        'pltNstates': 2,                        # How many states to be plotted. Default option is to plot all\n",
-    "        'refTraj':'test_set/sb/2_epsilon-0.0_Delta-1.0_lambda-0.1_gamma-4.0_beta-1.0.npy' # Reference trajectory \n",
+    "        'refTraj':'Jupyter_Notebooks/test_set/sb/2_epsilon-0.0_Delta-1.0_lambda-0.1_gamma-4.0_beta-1.0.npy' # Reference trajectory \n",
     "        }\n",
     "quant_dyn(**param)"
    ]
@@ -1052,7 +1078,7 @@
     }
    ],
    "source": [
-    "heom_dyn = np.load('test_set/sb/2_epsilon-0.0_Delta-1.0_lambda-0.1_gamma-4.0_beta-1.0.npy')\n",
+    "heom_dyn = np.load('Jupyter_Notebooks/test_set/sb/2_epsilon-0.0_Delta-1.0_lambda-0.1_gamma-4.0_beta-1.0.npy')\n",
     "pred_dyn = np.load('Qd_trajectory.npy')\n",
     "t_1 = np.real(heom_dyn[:,0])\n",
     "t_2 = np.real(pred_dyn[:,0])\n",
@@ -1065,7 +1091,7 @@
     "plt.plot(t_1, heom_state_1_pop, '-.')\n",
     "plt.xlabel(r'$t \\ \\Delta$')\n",
     "plt.ylabel(r'$\\rho_{11}$')\n",
-    "plt.legend([\"Predicted (OSTL)\", 'Reference (HEOM)'])\n",
+    "plt.legend([\"Predicted (AIQD)\", 'Reference (HEOM)'])\n",
     "plt.title('Time evolution of population \\n difference in the spin-boson model')"
    ]
   },
