--- a/Jupyter_Notebooks/OSTL_FMO.ipynb
+++ b/Jupyter_Notebooks/OSTL_FMO.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a7060cf6",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
+    "https://github.com/Arif-PhyChem/MLQD/blob/main/Jupyter_Notebooks/OSTL_FMO.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4c0613d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/Arif-PhyChem/MLQD.git\n",
+    "!pip install MLatom\n",
+    "!pip install tensorflow hyperopt scikit-learn matplotlib\n",
+    "import os\n",
+    "os.chdir('MLQD')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "34e0f342",
@@ -835,7 +859,7 @@
     "        'OptEpochs': 10,                # int: Number of epochs for CNN optimization \n",
     "        'TrEpochs': 10,                 # int: Number of epochs for CNN training  \n",
     "        'max_evals': 10,                # int: Maximum number of evaluations in the case of hyperopt optimization\n",
-    "        'dataPath': 'fmo_data',         # str: Data path\n",
+    "        'dataPath': 'Jupyter_Notebooks/fmo_data',         # str: Data path\n",
     "        'QDmodelOut': 'OSTL_FMO_model'  # str: (Optional), providing a name to save the model at\n",
     "        }\n",
     "\n",
@@ -1012,7 +1036,7 @@
     "        'hyperParam': 'False',          # str: Default is 'False', we can pass 'True' (optimize the hyperparameters) or 'False' (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # int: Patience for early stopping in CNN training\n",
     "        'TrEpochs': 10,                 # int: Number of epochs for CNN training  \n",
-    "        'dataPath': 'fmo_data',         # str: Data path\n",
+    "        'dataPath': 'Jupyter_Notebooks/fmo_data',         # str: Data path\n",
     "        'QDmodelOut': 'OSTL_FMO_model'  # str: (Optional), providing a name to save the model at\n",
     "        }\n",
     "\n",
@@ -1724,7 +1748,7 @@
     "        'systemType': 'FMO',                    # str: (Not optional)  Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
     "        'QDmodelIn': 'OSTL_FMO_model.hdf5',     # str: (Not Optional for useQDmodel), provide the name of the trained ML model\n",
     "        'QDtrajOut': 'Qd_trajectory',           # str: (Optional), File name where the trajectory should be saved \n",
-    "        'refTraj': 'test_set/FMO/8_initial-1_gamma-100.0_lambda-220.0_temp-190.0.npy', # the reference trajectory for plotting. If not provided, MLQD will ignore plotting\n",
+    "        'refTraj': 'Jupyter_Notebooks/test_set/FMO/8_initial-1_gamma-100.0_lambda-220.0_temp-190.0.npy', # the reference trajectory for plotting. If not provided, MLQD will ignore plotting\n",
     "        'xlim': 1000,                           # Xaxis limit for plotting\n",
     "        'pltNstates': 8                         # The number of states or sites to be plotted. Default option is to plot all of them \n",
     "        }\n",
@@ -1761,7 +1785,7 @@
     }
    ],
    "source": [
-    "ref_dyn = np.load('test_set/FMO/8_initial-1_gamma-100.0_lambda-220.0_temp-190.0.npy')\n",
+    "ref_dyn = np.load('Jupyter_Notebooks/test_set/FMO/8_initial-1_gamma-100.0_lambda-220.0_temp-190.0.npy')\n",
     "pred_dyn = np.load('Qd_trajectory.npy')\n",
     "t1 = np.real(ref_dyn[:,0])\n",
     "t2 = np.real(pred_dyn[:,0])\n",
