--- a/Jupyter_Notebooks/OSTL_SB.ipynb
+++ b/Jupyter_Notebooks/OSTL_SB.ipynb
@@ -19,7 +19,6 @@
    "source": [
     "# import the MLQD package from github and install some packages\n",
     "!git clone https://github.com/Arif-PhyChem/MLQD.git\n",
-    "!git clone https://github.com/Arif-PhyChem/MLQD.git\n",
     "!pip install MLatom\n",
     "!pip install tensorflow hyperopt scikit-learn matplotlib\n",
     "import os\n",
@@ -1598,7 +1597,6 @@
     "        'hyperParam': 'False',          # str: Default is 'False', we can pass 'True' (optimize the hyperparameters) or 'False' (don't optimize and run with the default structure)\n",
     "        'patience': 20,                 # int: Patience for early stopping in CNN training\n",
     "        'TrEpochs': 10,                 # int: Number of epochs for CNN training  \n",
-    "        'epochs': 200,                  # int: Number of epochs for NN optimization and training \n",
     "        'QDmodelOut': 'OSTL_SB_model'   # str: (Optional), providing a name to save the model at\n",
     "        }\n",
     "quant_dyn(**param)"
@@ -1752,7 +1750,7 @@
     "        'QDtrajOut': 'Qd_trajectory',           # str: (Optional), File name where the trajectory should be saved \n",
     "        'xlim': 20,                             # Xaxis limit for plotting. Default is equal to propagation time\n",
     "        'pltNstates': 2,                        # How many states to be plotted. Default option is to plot all\n",
-    "        'refTraj':'test_set/sb/2_epsilon-0.0_Delta-1.0_lambda-0.1_gamma-4.0_beta-1.0.npy' # Reference trajectory \n",
+    "        'refTraj':'Jupyter_Notebooks/test_set/sb/2_epsilon-0.0_Delta-1.0_lambda-0.1_gamma-4.0_beta-1.0.npy' # Reference trajectory \n",
     "        }\n",
     "quant_dyn(**param)"
    ]
