--- a/Jupyter_Notebooks/KRR_SB.ipynb
+++ b/Jupyter_Notebooks/KRR_SB.ipynb
@@ -109,15 +109,7 @@
    "source": [
     "## Preparation of the training data\n",
     "\n",
-    "Each trajectory is propagated for t= 20 (a.u.) with the time-step 0.05. For training, you can also use a larger time-step t = 0.1 to minize the cost of training. We take the intial dynamics of time-length $t_m$ from each trajectory and then use it as an input to predict the dynamics at the next time-step $t_{m+1}$. We include the dynamics at $t_{m+1}$ in the input short-time trajectory (dropping the value at $t_0$ to keep the length of the input the same) and then predict the dynamics at $t_{m+2}$. This process lasts till the last time-step. \n",
-    "\n",
-    "\n",
-    "![njp.png](attachment:njp.png)\n",
-    "    \n",
-    "            (Copyright: IOP Publishing https://iopscience.iop.org/article/10.1088/1367-2630/ac3261)\n",
-    "    \n",
-    "    \n",
-    "    "
+    "Each trajectory is propagated for t= 20 (a.u.) with the time-step 0.05. For training, you can also use a larger time-step t = 0.1 to minize the cost of training. We take the intial dynamics of time-length $t_m$ from each trajectory and then use it as an input to predict the dynamics at the next time-step $t_{m+1}$. We include the dynamics at $t_{m+1}$ in the input short-time trajectory (dropping the value at $t_0$ to keep the length of the input the same) and then predict the dynamics at $t_{m+2}$. This process lasts till the last time-step.     "
    ]
   },
   {
