--- a/Jupyter_Notebooks/OSTL_FMO.ipynb
+++ b/Jupyter_Notebooks/OSTL_FMO.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "source": [
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
-    "https://colab.research.google.com/github.com/Arif-PhyChem/MLQD/blob/main/Jupyter_Notebooks/OSTL_FMO.ipynb)"
+    "https://colab.research.google.com/github/Arif-PhyChem/MLQD/blob/main/Jupyter_Notebooks/OSTL_FMO.ipynb)"
    ]
   },
   {
@@ -260,13 +260,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "297d6328",
    "metadata": {},
    "source": [
     "### 1. Training with preparation of training data and optimization of the CNN model\n",
     "\n",
-    "We provide 20 trajectories in ```fmo_data``` for the sake of demonstration. Each trajectory is propagated with LTLME method upto ```t= 10 ps``` with time-step ```dt = 5 fs```. "
+    "We provide 20 trajectories in ```fmo_data``` for the sake of demonstration. Each trajectory is propagated with LTLME method upto ```t= 10 ps``` with time-step ```dt = 5 fs```. You can check out our QD3SET-1 database for complete data sets https://doi.org/10.48550/arXiv.2301.12096"
    ]
   },
   {
