--- a/Jupyter_Notebooks/OSTL_SB.ipynb
+++ b/Jupyter_Notebooks/OSTL_SB.ipynb
@@ -243,13 +243,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "edbaead8",
    "metadata": {},
    "source": [
     "### 1. Training with preparation of training data and optimization of the CNN model\n",
     "\n",
-    "We provide 20 trajectories in ```sb_data``` for the sake of demonstration. Each trajectory is propagated with HEOM method upto ```t= 20 (a.u.)``` with time-step ```dt = 0.05```. "
+    "We provide 20 trajectories in ```sb_data``` for the sake of demonstration. Each trajectory is propagated with HEOM method upto ```t= 20 (a.u.)``` with time-step ```dt = 0.05```. You can check out our QD3SET-1 database for complete data sets https://doi.org/10.48550/arXiv.2301.12096"
    ]
   },
   {
