--- a/Jupyter_Notebooks/OSTL_SB.ipynb
+++ b/Jupyter_Notebooks/OSTL_SB.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "212bee0d",
       "metadata": {
         "id": "212bee0d",
@@ -126,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "970fd501",
       "metadata": {
         "id": "970fd501"
@@ -168,7 +168,7 @@
         "\n",
         "We use the Hierarchical equations of motion (HEOM) approach and generate data for all the possible combinations of the following parameters: $\\epsilon = \\{0, 1\\}$, the reorganization energy $\\lambda \\in \\{0.1$, $0.2$, $0.3$, $0.4$, $0.5$, $0.6$, $0.7$, $0.8$, $0.9$, $1.0 \\},$ the characteristic frequency $\\gamma \\in \\{1$, $2$, $3$, $4$, $5$, $6$, $7$, $8$, $9$, $10\\},$ inverse temperature $\\beta = 1/T \\in \\{0.1$, $0.25$, $0.5$, $0.75$, $1\\}$. It should be noted that all parameters are in atomic units (a.u.). \n",
         "\n",
-        "We generate 500 trajectories for each case (symmetric and asymmetric $\\epsilon = \\{0, 1\\}$) and then train a CNN model following the OSTL approach. You can grab the trajectories from our **QDDSET-1 dataset** [Coming Soon]. **However, here for the sake of demonstration, we provide 20 trajectories in the ```sb_data``` folder.** "
+        "We generate 500 trajectories for each case (symmetric and asymmetric $\\epsilon = \\{0, 1\\}$) and then train a CNN model following the OSTL approach. You can grab the trajectories from our **QDDSET-1 database** https://arxiv.org/abs/2301.12096. **However, here for the sake of demonstration, we provide 20 trajectories in the ```sb_data``` folder.** "
       ]
     },
     {
@@ -207,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "a01f8d73",
       "metadata": {
         "id": "a01f8d73",
@@ -366,7 +366,7 @@
         "outputId": "542178a2-b844-4677-8846-fda2b9f8fa16"
       },
       "id": "z4NyXENH01iY",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -405,7 +405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "e49d9713",
       "metadata": {
         "id": "e49d9713",
@@ -1014,7 +1014,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "af5122f0",
       "metadata": {
         "id": "af5122f0",
@@ -1209,7 +1209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "4c486e06",
       "metadata": {
         "id": "4c486e06",
@@ -1398,7 +1398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "65d350de",
       "metadata": {
         "scrolled": true,
@@ -1543,7 +1543,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "d7c1951d",
       "metadata": {
         "id": "d7c1951d",
